infrastructure/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/ml_sandbox.MLSandboxService/RunTextGenerationModel"
                route:
                  timeout: 60s
                  cluster: sandbox_backend_cpu
              - match:
                  prefix: "/ml_sandbox.MLSandboxService"
                route:
                  timeout: 60s
                  cluster: sandbox_backend
              - match:
                  prefix: "/healthz"
                route:
                  timeout: 60s
                  cluster: sandbox_backend_all
              - match:
                  prefix: "/"
                route:
                  cluster: sandbox_frontend
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                inline_string: |
$SSL_CERTIFICATE
              private_key:
                inline_string: |
$SSL_PRIVATE_KEY

  clusters:
  - name: sandbox_backend_all
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: service_sandbox_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sandbox-cpu-1.nikitavbv.com
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: sandbox-gpu-1.nikitavbv.com
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: sandbox-gpu-2.nikitavbv.com
                port_value: 8080
  - name: sandbox_backend
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: service_sandbox_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sandbox-gpu-1.nikitavbv.com
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: sandbox-gpu-2.nikitavbv.com
                port_value: 8080
  - name: sandbox_backend_cpu
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: service_sandbox_backend_cpu
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sandbox-cpu-1.nikitavbv.com
                port_value: 8080
  - name: sandbox_frontend
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_sandbox_frontend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sandbox-frontend-1.nikitavbv.com
                port_value: 8080
